<resources>
    <string name="app_name">MyShoppingApp</string>
    <string name="adwc">Add New Product</string>
    <string name="tx">Find, Discover, Choose and Buy anything online.</string>
    <string name="ard">Already have an Account? Login</string>
    <string name="join">Join Now</string>

    <string name="mail">Email Address</string>
    <string name="name">Usename</string>
    <string name="password">Password</string>
    <string name="createacc">Create Account</string>

    <string name="Remember">Remember me</string>
    <string name="Forget">Forget Password?</string>
    <string name="Login">Login</string>
    <string name="iamadmin">I\'m an Admin?</string>
    <string name="iamadminot">I\'m not an Admin?</string>

    <string name="wonmbtn">Women\'s Clothing</string>
    <string name="menbtn">Men\'s Clothing</string>
    <string name="kidsbtn">Kid\'s Clothing</string>
    <string name="accesbtn">Accessories</string>
    <string name="logoutbtn">Logout</string>
    <string name="viewpbtn">Check New Orders</string>


    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>


    <string name="title_seller">Seller Registration Form</string>
    <string name="seller_name">Seller Name</string>
    <string name="seller_phone">Phone</string>
    <string name="seller_mail">Email</string>
    <string name="seller_password">Password</string>
    <string name="seller_address">Address</string>
    <string name="btn_reg">Register</string>
    <string name="btn_already">Already have an account</string>
    <string name="title_seller_login">Seller Login Form</string>
    <string name="btn_login">Login</string>
    <string name="title_activity_seller_home">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">LogOut</string>
    <string name="title_activity_seller_disaplay">MainActivity</string>
    <string name="title_activity_seller_display">MainActivity</string>
    <string name="title_activity_seller_front">MainActivity</string>


</resources>