<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".seller.SellerLoginActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/img_seller"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:src="@drawable/seller"
        android:scaleType="centerCrop"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/title_seller"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/img_seller"
        android:layout_margin="20dp"
        android:layout_marginStart="20dp"
        android:gravity="center"
        android:text="@string/title_seller_login"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints,UnknownId"
        tools:layout_editor_absoluteY="217dp" />
    <EditText
        android:id="@+id/seller_login_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_below="@id/title_seller"
        android:hint="@string/seller_mail"
        android:inputType="textEmailAddress"
        android:textSize="16dp"
        android:layout_marginTop="10dp" />


    <EditText
        android:id="@+id/seller_login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_below="@id/seller_login_email"
        android:inputType="textPassword"
        android:hint="@string/seller_password"
        android:textSize="16dp"
        android:layout_marginTop="10dp" />

    <Button
        android:id="@+id/selller_login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/seller_login_password"
        android:background="@android:color/holo_green_dark"
        android:text="@string/btn_login"
        android:textAllCaps="false"
        android:textSize="18dp"
        />

</RelativeLayout>