<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/oggg"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/app_logo"
        android:layout_width="394dp"
        android:layout_height="189dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="11dp"
        android:contentDescription="@string/join"
        android:src="@drawable/fin" />

    <TextView
        android:id="@+id/app_slogan"
        android:layout_width="257dp"
        android:layout_height="108dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="148dp"
        android:layout_marginEnd="71dp"
        android:text="@string/tx"
        android:textAlignment="center"
        android:textColor="@android:color/holo_blue_light"
        android:textSize="25sp"
        android:textStyle="bold|italic" />

    <Button
        android:id="@+id/main_login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/buttons"
android:layout_above="@+id/seller_btn"
        android:padding="20dp"
        android:text="@string/ard"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold" />


    <Button
        android:id="@+id/main_join_now_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/main_login_btn"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/input_design"
        android:padding="20dp"
        android:text="@string/join"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="19sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/seller_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:text="I'm a seller"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:layout_alignParentBottom="true"

        android:textSize="20sp"
        android:textStyle="bold" />


</RelativeLayout>